force-app/main/default/objects/Activity/fields/Exotel_CTI__From__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__From__c</fullName>
    <label>From</label>
    <type>Phone</type>
</CustomField>