force-app/main/default/objects/Activity/fields/Exotel_CTI__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Recording_URL__c</fullName>
    <description>Store the Recording URL of particular call</description>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>