force-app/main/default/objects/Activity/fields/Exotel_CTI__To__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__To__c</fullName>
    <label>To</label>
    <type>Phone</type>
</CustomField>