force-app/main/default/objects/Activity/fields/Exotel_CTI__Virtual_Number__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Virtual_Number__c</fullName>
    <label>Virtual Number</label>
    <type>Phone</type>
</CustomField>