force-app/main/default/objects/Activity/fields/Is_Case_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Tagged__c</fullName>
    <formula>IF(ISBLANK(Case__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Tagged?</label>
    <type>Text</type>
</CustomField>