force-app/main/default/objects/Activity/fields/No_Of_Missed_Calls__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Missed_Calls__c</fullName>
    <label>No. Of Missed Calls</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>